<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">&app_name;</string>
    <string name="error_generic">An error occurred.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="introduction_welcome_header">Welcome to &app_name;!</string>
    <string name="introduction_welcome_description">&app_name; is an unofficial companion app for students of the University of Bremen that allows you to keep your own schedule in close reach. Enter your own weekly events and edit them as you wish, or download them straight from Stud.IP.\n\nYou can also view the offers for all of the canteens in Bremen and Bremerhaven. Filter by preferences using the buttons at the top of the canteen screen, or go into the settings to configure what substances you are allergic against, and the app will do its best to only show you offers that are relevant for you.\n\nClick the button below to download your schedule right away! If you skip this, you\'ll always have the option to download your schedule from the app\'s settings later.</string>
    <string name="introduction_button_download">Download your Stud.IP schedule</string>
    <string name="introduction_or">– or –</string>
    <string name="introduction_button_continue">Continue to the app</string>
    <string name="compact_overview_button_settings_hint">App settings</string>
    <string name="compact_overview_button_events_hint">Schedule</string>
    <string name="compact_overview_button_refresh_offers_hint">Refresh offers</string>
    <string name="compact_overview_button_offers_hint">All offers</string>
    <string name="compact_overview_header_events">Today\'s events</string>
    <string name="compact_overview_header_offers">On offer at the %s</string>
    <string name="compact_overview_subheader_offers_empty">No information available</string>
    <string name="compact_overview_subheader_offers_no_news">Offers from %s</string>
    <string name="compact_overview_subheader_offers_news">Offers from %s; news available</string>
    <string name="fragment_button_back_to_overview_hint">Back to overview</string>
    <string name="fetch_error_snack">Something went wrong!</string>
    <string name="fetch_error_webpage_snack">You must navigate to your schedule!</string>
    <string name="fetch_error_login_snack">You must log in first!</string>
    <string name="canteen_fetch_error">Couldn\'t retrieve the canteen plan!</string>
    <string name="canteen_item_difference_text_one">One offer hidden due to your preferences.</string>
    <string name="canteen_item_difference_text_other">%d offers hidden due to your preferences.</string>
    <string name="event_empty_fetch_button">Download your schedule from Stud.IP</string>
    <string name="toast_fetch_finished_zero">Your schedule has been refreshed!</string>
    <string name="toast_fetch_finished_one">Your schedule has been refreshed, but one item could not be saved.</string>
    <string name="toast_fetch_finished_other">Your schedule has been refreshed, but %d items could not be saved.</string>
    <string name="fetch_snack_info_reminder">Click the info icon at the bottom if you need any help here.</string>
    <string name="fetch_bar_close_title">Close</string>
    <string name="fetch_bar_close_desc">Close the website without saving anything</string>
    <string name="fetch_bar_refresh_title">Refresh</string>
    <string name="fetch_bar_refresh_desc">Refresh the page</string>
    <string name="fetch_bar_help_title">Help</string>
    <string name="fetch_bar_help_desc">Show help</string>
    <string name="fetch_bar_schedule_title">Schedule</string>
    <string name="fetch_bar_schedule_desc">Go to your schedule</string>
    <string name="fetch_bar_help_sheet_title">How to save your schedule in the app</string>
    <string name="fetch_bar_help_sheet_content"> • Log in with your Stud.IP login\n • Open your schedule view, in case it doesn\'t open automatically, by clicking the rightmost icon in the bottom bar that looks like a pencil and a ruler\n • Click the \'save\' button that appears in the bottom right corner\n • Done!</string>
    <string name="fetch_bar_save_desc">Save the schedule in the app</string>
    <string name="schedule_button_overview_hint">View full schedule</string>
    <string name="schedule_fab_add_text">New event</string>
    <string name="schedule_no_events">You don\'t have any events for %s.</string>
    <string name="sheet_event_action_edit_event_title">Edit this event</string>
    <string name="sheet_event_action_add_task_title">Add a task or exam</string>
    <string name="sheet_event_action_view_tasks_title">View tasks and exams for this event</string>
    <string name="sheet_event_action_find_room_title">Find this event\'s room</string>
    <string name="sheet_event_action_delete_event_title">Delete this event</string>
    <string name="sheet_event_confirm_deletion_header">Confirm delete action</string>
    <string name="sheet_event_confirm_deletion_content">Are you sure that you want to delete the event \'%s\'?</string>
    <string name="sheet_event_confirm_deletion_snack">The event has been deleted.</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="sheet_schedule_update_delete_confirm">Sure?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sheet_schedule_snack_delete">Event has been deleted.</string>
    <string name="sheet_schedule_snack_add">Event has been added.</string>
    <string name="sheet_schedule_snack_update">Event has been updated.</string>
    <string name="sheet_schedule_update_header_edit">Edit existing event</string>
    <string name="sheet_schedule_update_header_add">Add new event</string>
    <string name="sheet_schedule_update_subheader_add">Schedule: %s</string>
    <string name="sheet_schedule_update_title_hint">Event title</string>
    <string name="sheet_schedule_update_lecturers_hint">Lecturer(s)</string>
    <string name="sheet_schedule_update_room_hint">Room</string>
    <string name="sheet_schedule_update_timeslot_middle" translatable="false">–</string>
    <string name="sheet_schedule_update_no_timetable">You must create a schedule before you add events!</string>
    <string name="sheet_schedule_update_hint_quarter">Change to academic quarter</string>
    <string name="sheet_schedule_update_hint_quarter_error">Sorry, an error occurred!</string>
    <string name="sheet_schedule_update_timestamp_error_mixed">The course cannot end before it begins.</string>
    <string name="sheet_schedule_update_timestamp_error_equal">Start and end times cannot be equal.</string>
    <string name="sheet_schedule_update_timestamp_error_start">The course can\'t begin after it ends!</string>
    <string name="sheet_schedule_update_timestamp_error_end">The course can\'t end before it begins!</string>
    <string name="sheet_schedule_update_text_field_empty_error">This field cannot be empty</string>
    <string name="sheet_schedule_update_time_dialog_start_hint">Event start time</string>
    <string name="sheet_schedule_update_time_dialog_end_hint">Event end time</string>
    <string name="task_overview_button_order_hint">Order tasks</string>
    <string name="task_order_menu_title_alphabetically">Alphabetically</string>
    <string name="task_order_menu_date_created">Date created</string>
    <string name="task_order_menu_date_due">Date due</string>
    <string name="formatted_date_string_comma" translatable="false">%1$s, %2$s</string>
    <string name="formatted_date_string_localised">%1$s at %2$s</string>
    <string name="task_item_notification_none">You won\'t be notified</string>
    <string name="task_item_notification_active_future">You will be notified on %1$s at %2$s.</string>
    <string name="task_item_notification_active_past">You were notified on %1$s at %2$s.</string>
    <string name="task_overview_snack_unimplemented">Tasks are not yet implemented!</string>
    <string name="task_overview_fab_add_task">Add task</string>
    <string name="canteen_button_opening_hours_hint">View canteen opening hours</string>
    <string name="canteen_button_notifications_hint">View canteen notifications</string>
    <string name="canteen_no_offer_header">No offers</string>
    <string name="canteen_no_offer_desc">There are no offers available for this day</string>
    <string name="canteen_news_sheet_title">News for this canteen</string>
    <string name="canteen_fab_opening_hours_content_desc">Show opening hours</string>
    <string name="canteen_fab_switch_canteen">Switch canteen</string>
    <string name="mensa_uni">Uni-Mensa</string>
    <string name="cafe_central">Café Central</string>
    <string name="mensa_nw1" tools:ignore="Typos">Mensa NW1</string>
    <string name="cafeteria_gw2">Cafeteria GW2</string>
    <string name="mensa_neustadt">Mensa Neustadtswall</string>
    <string name="mensa_werder">Mensa Werderstraße</string>
    <string name="mensa_airport">Mensa Airport</string>
    <string name="mensa_bhv">Mensa Bremerhaven</string>
    <string name="cafeteria_bhv">Cafeteria Bremerhaven</string>
    <string name="mensa_hfk">Interimsmensa HfK</string>
    <string name="allergen_wheat">gluten (wheat)</string>
    <string name="allergen_rye">gluten (rye)</string>
    <string name="allergen_barley">gluten (barley)</string>
    <string name="allergen_oat">gluten (oats)</string>
    <string name="allergen_spelt">gluten (spelt)</string>
    <string name="allergen_kamut">gluten (kamut)</string>
    <string name="allergen_crustaceans">crustaceans</string>
    <string name="allergen_eggs">eggs</string>
    <string name="allergen_fish">fish</string>
    <string name="allergen_peanuts">peanuts</string>
    <string name="allergen_soy">soy</string>
    <string name="allergen_dairy">dairy &amp; lactose</string>
    <string name="allergen_almonds">almonds</string>
    <string name="allergen_hazelnuts">hazelnuts</string>
    <string name="allergen_walnuts">walnuts</string>
    <string name="allergen_cashew_nuts">cashew nuts</string>
    <string name="allergen_pecans">pecans</string>
    <string name="allergen_brazil_nuts">brazil nuts</string>
    <string name="allergen_pistachios">pistachios</string>
    <string name="allergen_macadamia">macadamia nuts</string>
    <string name="allergen_celery">celery</string>
    <string name="allergen_mustard">mustard</string>
    <string name="allergen_sulphides">sulphur oxide &amp; sulphide concentrated above 10mg/kg or 10mg/l</string>
    <string name="allergen_lupins">lupins</string>
    <string name="allergen_sesame">sesame</string>
    <string name="allergen_molluscs">molluscs</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_exam_overview">Tasks</string>
    <string name="nav_canteen">Canteens</string>
    <string name="nav_room_finder">Room Finder</string>
    <string name="nav_settings">Settings</string>
    <string name="allergens_config_header">Select which allergens you\'d like to avoid</string>
    <string name="allergens_config_content">Note: please don\'t entirely rely on this. Always check the notices displayed at the canteen you\'re visiting to confirm substances you may be allergic against are not present in their offerings. Some canteens unfortunately don\'t provide full allergen information online.</string>
</resources>