<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mensa_uni"
        android:title="@string/mensa_uni"
        android:enabled="true"/>
    <item
        android:id="@+id/cafe_central"
        android:title="@string/cafe_central"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_nw1"
        android:title="@string/mensa_nw1"
        android:enabled="true"/>
    <item
        android:id="@+id/cafeteria_gw2"
        android:title="@string/cafeteria_gw2"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_neustadt"
        android:title="@string/mensa_neustadt"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_werder"
        android:title="@string/mensa_werder"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_airport"
        android:title="@string/mensa_airport"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_bhv"
        android:title="@string/mensa_bhv"
        android:enabled="true"/>
    <item
        android:id="@+id/cafeteria_bhv"
        android:title="@string/cafeteria_bhv"
        android:enabled="true"/>
    <item
        android:id="@+id/mensa_hfk"
        android:title="@string/mensa_hfk"
        android:enabled="true"/>
</menu>