<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@anim/layout_animation_fall_down">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:src="@drawable/pill"
        android:tint="?attr/colorPrimary"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_header"
        app:layout_constraintBottom_toBottomOf="@id/text_header"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:fontFamily="@font/lato_blackitalic"
        android:text="@string/introduction_welcome_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_header"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_header"
        app:layout_constraintBottom_toTopOf="@id/button_download_schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduction_welcome_description"
            android:textSize="16sp"/>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/button_download_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/cloud_download"
        android:text="@string/introduction_button_download"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_buttons_filler"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_buttons_filler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_or"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_continue"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/arrow_forward"
        app:iconGravity="end"
        android:text="@string/introduction_button_continue"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="?attr/colorOutlineVariant"/>

</androidx.constraintlayout.widget.ConstraintLayout>